@@ -1,5 +1,6 @@
 package com.pongsky.kit.web.request;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -12,6 +13,6 @@ public interface Whitelist {
     /**
      * 放行 URL 列表
      */
-    List<String> URLS = List.of("/actuator/health");
+    List<String> URLS = Arrays.asList("/actuator/health");
 
 }
