@@ -2,6 +2,7 @@ package com.pongsky.kit.excel.handler.export;
 
 import com.pongsky.kit.excel.annotation.ExcelProperty;
 import com.pongsky.kit.excel.entity.ExcelExportInfo;
+import org.apache.poi.util.IOUtils;
 
 import javax.imageio.ImageIO;
 import javax.imageio.stream.ImageInputStream;
@@ -16,7 +17,7 @@ import java.lang.reflect.Field;
  *
  * @author pengsenhao
  **/
-public class ExcelInputStreamImageExportHandler extends ExcelBufferedImageExportHandler {
+public class ExcelInputStreamImageExportHandler extends BaseExcelBufferedImageExportHandler {
 
     @Override
     public void exec(Field field, ExcelProperty excelProperty, Object obj, ExcelExportInfo info) throws IOException {
@@ -25,7 +26,7 @@ public class ExcelInputStreamImageExportHandler extends ExcelBufferedImageExport
         }
         byte[] bytes;
         try (InputStream inputStream = (InputStream) obj) {
-            bytes = inputStream.readAllBytes();
+            bytes = IOUtils.toByteArray(inputStream);
         }
         if (bytes == null || bytes.length == 0) {
             return;
