@@ -4,6 +4,7 @@ import com.pongsky.kit.excel.annotation.ExcelProperty;
 import com.pongsky.kit.excel.annotation.ExcelPropertys;
 import com.pongsky.kit.excel.entity.ExcelImportInfo;
 import com.pongsky.kit.excel.enums.ExcelType;
+import com.pongsky.kit.excel.enums.ParseType;
 import org.apache.poi.hssf.usermodel.HSSFClientAnchor;
 import org.apache.poi.hssf.usermodel.HSSFPicture;
 import org.apache.poi.hssf.usermodel.HSSFPictureData;
@@ -12,6 +13,7 @@ import org.apache.poi.hssf.usermodel.HSSFSheet;
 import org.apache.poi.hssf.usermodel.HSSFWorkbook;
 import org.apache.poi.ooxml.POIXMLDocumentPart;
 import org.apache.poi.ss.usermodel.Cell;
+import org.apache.poi.ss.usermodel.DateUtil;
 import org.apache.poi.ss.usermodel.PictureData;
 import org.apache.poi.ss.usermodel.Row;
 import org.apache.poi.ss.usermodel.Sheet;
@@ -30,6 +32,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
+import java.math.BigDecimal;
+import java.text.DecimalFormat;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -45,16 +49,15 @@ import java.util.stream.Collectors;
  *
  * @author pengsenhao
  **/
-public class ExcelImportUtils {
+public class ExcelImportUtils<T> {
 
     /**
      * 导入 excel 相关参数信息
      */
-    private final ExcelImportInfo info;
+    private final ExcelImportInfo<T> info;
 
-    public ExcelImportUtils(Class<?> clazz) {
-        info = new ExcelImportInfo();
-        info.setClazz(clazz);
+    public ExcelImportUtils(Class<T> clazz) {
+        info = new ExcelImportInfo<>(clazz);
         List<Class<?>> classes = new ArrayList<>();
         this.getSuperclasses(classes, clazz);
         info.setFields(new ArrayList<>());
@@ -66,14 +69,14 @@ public class ExcelImportUtils {
             for (Field field : fieldList) {
                 ExcelProperty excelProperty = field.getAnnotation(ExcelProperty.class);
                 if (excelProperty != null) {
-                    titleMaxNum = Integer.max(titleMaxNum, excelProperty.value().length);
-                    info.getFields().add(List.of(field, excelProperty));
+                    titleMaxNum = Integer.max(titleMaxNum, excelProperty.topHeads().length);
+                    info.getFields().add(Arrays.asList(field, excelProperty));
                 }
                 ExcelPropertys excelPropertys = field.getAnnotation(ExcelPropertys.class);
                 if (excelPropertys != null) {
                     for (ExcelProperty ex : excelPropertys.value()) {
-                        titleMaxNum = Integer.max(titleMaxNum, ex.value().length);
-                        info.getFields().add(List.of(field, ex));
+                        titleMaxNum = Integer.max(titleMaxNum, ex.topHeads().length);
+                        info.getFields().add(Arrays.asList(field, ex));
                     }
                 }
             }
@@ -110,7 +113,7 @@ public class ExcelImportUtils {
      * @throws IOException                  IOException
      * @throws ReflectiveOperationException ReflectiveOperationException
      */
-    public List<?> read(String filename, InputStream inputStream, String sheetName) throws IOException, ReflectiveOperationException {
+    public List<T> read(String filename, InputStream inputStream, String sheetName) throws IOException, ReflectiveOperationException {
         if (info.getFields().size() == 0) {
             // 没有任何字段需要写入则直接返回空结果
             return Collections.emptyList();
@@ -130,7 +133,7 @@ public class ExcelImportUtils {
      * @throws IOException                  IOException
      * @throws ReflectiveOperationException ReflectiveOperationException
      */
-    public List<?> read(File file, String sheetName) throws IOException, ReflectiveOperationException {
+    public List<T> read(File file, String sheetName) throws IOException, ReflectiveOperationException {
         if (info.getFields().size() == 0) {
             // 没有任何字段需要写入则直接返回空结果
             return Collections.emptyList();
@@ -149,7 +152,7 @@ public class ExcelImportUtils {
      * @return 读取数据结果列表
      * @throws ReflectiveOperationException ReflectiveOperationException
      */
-    public List<?> read(Workbook workbook, String sheetName) throws ReflectiveOperationException {
+    public List<T> read(Workbook workbook, String sheetName) throws ReflectiveOperationException {
         if (workbook == null) {
             return Collections.emptyList();
         }
@@ -168,7 +171,7 @@ public class ExcelImportUtils {
                 pictureDates = this.getPictureDataByXlsx((XSSFSheet) sheet);
                 break;
         }
-        List<Object> results = new ArrayList<>();
+        List<T> results = new ArrayList<>();
         // 循环读取行数据
         for (int rowNum = info.getTitleMaxNum(); rowNum <= sheet.getLastRowNum(); rowNum++) {
             Row row = sheet.getRow(rowNum);
@@ -176,7 +179,7 @@ public class ExcelImportUtils {
                 // 行内不包含任何单元格，则跳过
                 continue;
             }
-            Object result = info.getClazz().getDeclaredConstructor().newInstance();
+            T result = info.getClazz().getDeclaredConstructor().newInstance();
             for (int i = 0; i < info.getFields().size(); i++) {
                 Cell cell = row.getCell(i);
                 if (cell == null) {
@@ -184,9 +187,10 @@ public class ExcelImportUtils {
                 }
                 List<Object> fieldExcels = info.getFields().get(i);
                 Field field = ExcelImportInfo.getField(fieldExcels);
+                ParseType type = ParseType.getFieldType(field);
                 ExcelProperty excelProperty = ExcelImportInfo.getExcel(fieldExcels);
                 PictureData pictureData = pictureDates.get(this.buildCoordinateKey(rowNum, i));
-                String cellValue = this.getCellValue(cell);
+                Object cellValue = this.getCellValue(cell, type);
                 try {
                     excelProperty.importHandler().getDeclaredConstructor().newInstance()
                             // 如果有图片，则优先处理图片
@@ -227,7 +231,7 @@ public class ExcelImportUtils {
             throw new RuntimeException("上传文件不是一个 excel 文件");
         }
         Workbook workbook;
-        try (inputStream) {
+        try {
             switch (excelType) {
                 case XLS:
                     workbook = new HSSFWorkbook(inputStream);
@@ -236,6 +240,10 @@ public class ExcelImportUtils {
                 default:
                     workbook = new XSSFWorkbook(inputStream);
                     break;
+            }
+        } finally {
+            if (inputStream != null) {
+                inputStream.close();
             }
         }
         return workbook;
@@ -280,34 +288,57 @@ public class ExcelImportUtils {
      * 获取列值
      *
      * @param cell 列
+     * @param type 字段类型
      * @return 获取列值
      */
-    private String getCellValue(Cell cell) {
-        String cellValue = null;
+    private Object getCellValue(Cell cell, ParseType type) {
+        Object cellValue = null;
         // 判断数据的类型
         switch (cell.getCellType()) {
             // 数字
             case NUMERIC:
-                cellValue = String.valueOf(cell.getNumericCellValue());
+                // 公式
+            case FORMULA:
+                cellValue = cell.getNumericCellValue();
+                if (DateUtil.isCellDateFormatted(cell)) {
+                    // POI Excel 日期格式转换
+                    switch (type) {
+                        case DATE:
+                            cellValue = DateUtil.getJavaDate((Double) cellValue);
+                            break;
+                        case LOCAL_DATE:
+                            cellValue = DateUtil.getLocalDateTime((Double) cellValue).toLocalDate();
+                            break;
+                        case LOCAL_TIME:
+                            cellValue = DateUtil.getLocalDateTime((Double) cellValue).toLocalTime();
+                            break;
+                        case LOCAL_DATE_TIME:
+                        default:
+                            cellValue = DateUtil.getLocalDateTime((Double) cellValue);
+                            break;
+                    }
+                } else {
+                    if ((Double) cellValue % 1 != 0) {
+                        cellValue = new BigDecimal(cellValue.toString());
+                    } else {
+                        cellValue = new DecimalFormat("0").format(cellValue);
+                    }
+                }
                 break;
             // 字符串
             case STRING:
-                cellValue = String.valueOf(cell.getStringCellValue());
+                cellValue = cell.getStringCellValue();
                 break;
-            // Boolean
+            // 布尔
             case BOOLEAN:
-                cellValue = String.valueOf(cell.getBooleanCellValue());
-                break;
-            // 公式
-            case FORMULA:
-                cellValue = String.valueOf(cell.getCellFormula());
-                break;
-            // 空值
-            case BLANK:
-                cellValue = "";
+                cellValue = cell.getBooleanCellValue();
                 break;
             // 故障
             case ERROR:
+                cellValue = cell.getErrorCellValue();
+                break;
+            // 空值
+            case BLANK:
             default:
                 break;
         }
